# lottie-rs

crates/lottie/: Cargo.toml
crates/lottie/src/: font.rs  layer.rs  lib.rs  model.rs  renderer.rs  timeline.rs
crates/lottie/src/layer/: staged.rs
crates/lottie/src/model/: helpers.rs
crates/player/src/: main.rs
crates/renderer-bevy/: Cargo.toml
crates/renderer-bevy/src/: lib.rs  plugin.rs
crates/renderer-bevy/tests/: fixtures.rs
