[package]
edition = "2021"
name = "lottie"
version = "0.1.0"
description = "Bodymovin lottie file format parser and logic layer"
license = "MIT OR Apache-2.0"
authors = ["Zimon Tai <daizhuoxian@gmail.com>"]
categories = ["graphics", "rendering"]
keywords = ["lottie", "animation", "parser", "graphics", "bevy"]
readme = "README.md"
repository = "https://github.com/zimond/lottie-rs/"

[dependencies]
flo_curves = "0"
glam = "0"
lyon_path = "1"
slotmap = "1"
thiserror = "1"
ureq = "2"
base64 = "0"
url = "2"
log = "0"
euclid = "0"
serde_json = "1"
serde_repr = "0"
read_color = "1"
ordered-float = "4"
fontkit = { version = "0", optional = true }

[dependencies.serde]
features = ["derive"]
version = "1"


[dev-dependencies]
serde_path_to_error = "0"

[target.'cfg(not(all(target_os = "unknown", target_arch = "wasm32")))'.dependencies]
dirs = "5"

[features]
default = []
text = ["fontkit-lib"]
fontkit-lib = ["fontkit"]
