[package]
edition = "2021"
name = "lottie-renderer-bevy"
version = "0.1.0"
description = "Bodymovin lottie file renderer using Bevy engine"
license = "MIT OR Apache-2.0"
authors = ["Zimon Tai <daizhuoxian@gmail.com>"]
categories = ["graphics", "rendering"]
keywords = ["lottie", "animation", "parser", "graphics", "bevy"]
readme = "README.md"
repository = "https://github.com/zimond/lottie-rs/"

[dependencies]
# bevy_diagnostic = "0.7.0"
flo_curves = "0"
log = "0"
ordered-float = "4"
infer = "0"
bevy_egui = { version = "0", optional = true }
bevy = { version = "0", features = ["bevy_audio", "mp3", "flac", "wav"] }
wgpu = "0"
image = { version = "0", default-features = false, features = ["png"] }
bevy_tweening_captured = "0"
lottie = { path = "../lottie" }
lyon = "1"
bevy-inspector-egui = { version = "0", optional = true }
futures = "0"
event-listener = "5"
tiny-skia = "0"

[dev-dependencies]
glob = "0"
png = "0"
rstest = "0"
smol = "2"

[features]
default = []
egui = ["bevy_egui", "bevy-inspector-egui"]
